# kube-clusterguard

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  cli.md  configuration.md  release.md  reproducibility.md  roadmap.md  rules.md  validation.md
examples/: clean-deployment.yaml  policy.yaml  risky-deployment.yaml
src/clusterguard/: __init__.py  cli.py  doctor.py  findings.py  loaders.py  policy.py  registry.py  reports.py  rules.py  scanner.py
tests/: test_clusterguard.py
