[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kube-clusterguard"
version = "0.1.0"
description = "Security, cost, and reliability guardrails for AI/ML compute clusters."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vinay Gupta" }]
keywords = ["kubernetes", "ml-infra", "security", "gpu", "reliability"]
dependencies = []

[project.scripts]
clusterguard = "clusterguard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
