[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kube-clusterguard"
version = "0.1.0"
description = "Security, cost, and reliability guardrails for AI/ML compute clusters."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Vinay Gupta" }]
keywords = ["kubernetes", "ml-infra", "security", "gpu", "reliability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["build>=1.2", "pre-commit>=3.7", "pytest>=8.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/aivinay/kube-clusterguard"
Issues = "https://github.com/aivinay/kube-clusterguard/issues"
Source = "https://github.com/aivinay/kube-clusterguard"

[project.scripts]
clusterguard = "clusterguard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
